Bug fixes and setting up of config folder